// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id               String   @unique @default(cuid())
  email            String   @unique
  hash             String?
  firstName        String
  lastName         String
  provider         Provider @default(email)
  isSocialAuth     Boolean  @default(false)
  isEmailConfirmed Boolean  @default(false)
  posts            Post[]
  // comments         Comment[]

  @@map("users")
}

enum Provider {
  email
  google
  facebook
  apple
}

model Post {
  id              String    @unique @default(cuid())
  title           String
  description     String
  backgroundImage String
  content         String
  hashTags        String[]
  views           Int?      @default(0)
  // claps           String[] @default([])
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
  authorID        String
  user            User      @relation(fields: [authorID], references: [id], onDelete: Cascade, onUpdate: Cascade)
  comments        Comment[] 

  @@map("posts")
}

model Comment {
  id        String   @unique @default(cuid())
  comment   String
  postID    String
  author    String //FirstName + Lastname
  authorID  String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  Post      Post?    @relation(fields: [postID], references: [id])

  @@map("comments")
}
